[PC-00] fix actuator library order in security context